<resources>
    <string name="app_name">just java 2</string>
    <string name="_1">1</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="ksh">Ksh</string>
    <string name="order">order</string>
    <string name="cappuccino">cappuccino</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="cappu">cappu</string>
</resources>
