<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title_textview"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/quantity"
        android:textColor="@android:color/holo_red_light"
        android:textSize="36sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"

        android:layout_marginBottom="5dp"
        android:layout_marginStart="4dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/increment_btn"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:text="@string/plus"
            android:onClick="increase"
            android:background="@android:color/holo_blue_light"
            android:gravity="center"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/quantity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/_1"
            android:textSize="36sp"/>

        <Button
            android:id="@+id/decreament_btn"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:text="@string/minus"
            android:onClick="decrease"
            android:background="@android:color/holo_blue_light"
            android:gravity="center"
            android:padding="5dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/price_titlev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:text="@string/price"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/price_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:text="@string/ksh"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/order_btn"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_blue_light"
        android:onClick="oderSubmit"
        android:text="@string/order" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/coffee_imgv1"
            android:layout_width="185dp"
            android:layout_height="150dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/cappu"
            android:src="@drawable/cappu"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <ImageView
            android:id="@+id/coffee_imgv2"
            android:layout_width="185dp"
            android:layout_height="150dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/cappuccino"
            android:src="@drawable/cappuccino"
            app:srcCompat="@mipmap/ic_launcher_round" />
    </LinearLayout>

</LinearLayout>